 * #339: [FreeBSD] get_pid_list() can allocate all the memory on system.
 * #341: [Linux] psutil might crash on import due to error in retrieving system
         terminals map.
 * #344: [FreeBSD] swap_memory() might return incorrect results due to
         kvm_open(3) not being called. (patch by Jean Sebastien)
 * #338: [Linux] disk_io_counters() fails to find some disks.
 * #353: [OSX] get_users() returns an empty list on OSX 10.8.
 * #356: Process.parent now checks whether parent PID has been reused in which
         case returns None.
 * #365: Process.set_nice() should check PID has not been reused by another
         process.
 * #366: [FreeBSD] get_memory_maps(), get_num_fds(), get_open_files() and
         getcwd() Process methods raise RuntimeError instead of AccessDenied.

API CHANGES

 * [Linux] Process methods not working because of a poor /proc implementation
   will raise NotImplementedError instead of RuntimeError.
 * Process.cmdline property is no longer cached after first access.
 * psutil.error module is deprecated and scheduled for removal.
 * Process.ppid property is no longer cached


0.6.1 - 2012-08-16
------------------

NEW FEATURES

 * #316: process cmdline property now makes a better job at guessing the process
         executable from the cmdline.

BUG FIXES

 * #316: process exe was resolved in case it was a symlink.
 * #318: python 2.4 compatibility was broken.

API CHANGES

 * process exe can now return an empty string instead of raising AccessDenied.
 * process exe is no longer resolved in case it's a symlink.


0.6.0 - 2012-08-13
------------------

NEW FEATURES

 * #216: [POSIX] get_connections() UNIX sockets support.
 * #220: [FreeBSD] get_connections() has been rewritten in C and no longer
         requires lsof.
 * #222: [OSX] add support for process cwd.
 * #261: process extended memory info.
 * #295: [OSX] process executable path is now determined by asking the OS
         instead of being guessed from process cmdline.